--- a/components/lightbox.html
+++ b/components/lightbox.html
@@ -25,7 +25,7 @@
 
 
         <!-- On click, lightbox,  need ti be just under body tag to avoid conflicts -->
-        <div x-data="{ isLightboxVisible: false, isOverlayVisible: false, isLiked: false, likesCount: 85, commentsCount: 7 }">
+        <div x-data="{ isLightboxVisible: false, isOverlayVisible: false, isCommentsVisible: false, isLiked: false, likesCount: 85, commentsCount: 7 }">
 
             <div class="flex flex-col h-screen items-center justify-center">      
                 <div class="bg-white p-8 shadow-md rounded-sm">
@@ -73,84 +73,109 @@
                 </div>             
             </div>
 
-            <!-- On click, lightbox -->
-            <div class="absolute top-0 left-0 flex flex-col bg-black bg-opacity-30 w-full h-screen z-40"
+            <!-- On click, lightbox BG -->
+            <div class="absolute top-0 left-0 flex flex-col bg-black bg-opacity-60 w-full min-h-screen z-40"
                  x-show="isLightboxVisible"
-                 @click.away="isLightboxVisible = false"
             >
-                <!-- Navigation bar -->
-                <div class="bg-white flex items-center justify-between p-4">
-                    <!-- Author -->
-                    <div class="flex items-center">
+                <!-- Lightbox -->
+                <div class="max-w-3xl mx-auto my-16 shadow-md"
+                     @click.away="isLightboxVisible = false"
+                >
+
+                
+                    <!-- Navigation bar -->
+                    <div class="bg-white flex items-center justify-between p-4">
+                        <!-- Author -->
+                        <div class="flex items-center">
+                            <div>
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24"
+                                    class="h-4 w-4 fill-current text-black mr-2"
+                                >
+                                    <path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm7.753 18.305c-.261-.586-.789-.991-1.871-1.241-2.293-.529-4.428-.993-3.393-2.945 3.145-5.942.833-9.119-2.489-9.119-3.388 0-5.644 3.299-2.489 9.119 1.066 1.964-1.148 2.427-3.393 2.945-1.084.25-1.608.658-1.867 1.246-1.405-1.723-2.251-3.919-2.251-6.31 0-5.514 4.486-10 10-10s10 4.486 10 10c0 2.389-.845 4.583-2.247 6.305z"/>
+                                </svg>
+                            </div>
+
+                            <div class="font-semibold text-xs" style="font-family: 'Poppins';">
+                                sylent
+                            </div>
+                        </div>
+
+                        <!-- Close -->
                         <div>
-                            <svg xmlns="http://www.w3.org/2000/svg"
-                                 viewBox="0 0 24 24"
-                                 class="h-4 w-4 fill-current text-black mr-2"
+                            <svg xmlns="http://www.w3.org/2000/svg" 
+                                viewBox="0 0 24 24" 
+                                class="h-3 w-3 fill-current text-black cursor-pointer"
+                                @click="isLightboxVisible = false"
                             >
-                                <path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm7.753 18.305c-.261-.586-.789-.991-1.871-1.241-2.293-.529-4.428-.993-3.393-2.945 3.145-5.942.833-9.119-2.489-9.119-3.388 0-5.644 3.299-2.489 9.119 1.066 1.964-1.148 2.427-3.393 2.945-1.084.25-1.608.658-1.867 1.246-1.405-1.723-2.251-3.919-2.251-6.31 0-5.514 4.486-10 10-10s10 4.486 10 10c0 2.389-.845 4.583-2.247 6.305z"/>
+                                <path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/>
                             </svg>
                         </div>
-
-                        <div class="font-semibold text-xs" style="font-family: 'Poppins';">
-                            sylent
-                        </div>
                     </div>
 
-                    <!-- Close -->
                     <div>
+                        <!-- Case: image square (width = height) -->
+                        <img src="https://picsum.photos/id/441/1024/1024" class="object-cover w-full" />
+                    </div>
+
+                    <!-- Likes / Share /Comments  -->
+                    <div class="bg-white flex items-center pb-2 pt-4 px-4">
                         <svg xmlns="http://www.w3.org/2000/svg" 
-                             viewBox="0 0 24 24" 
-                             class="h-3 w-3 fill-current text-black cursor-pointer"
-                             @click="isLightboxVisible = false"
+                            viewBox="0 0 24 24"
+                            class="h-4 w-4 fill-current text-black cursor-pointer"
+                            @click="isLiked = true; likesCount++;"
+                            x-show="! isLiked"
                         >
-                            <path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/>
+                            <path d="M6.28 3c3.236.001 4.973 3.491 5.72 5.031.75-1.547 2.469-5.021 5.726-5.021 2.058 0 4.274 1.309 4.274 4.182 0 3.442-4.744 7.851-10 13-5.258-5.151-10-9.559-10-13 0-2.676 1.965-4.193 4.28-4.192zm.001-2c-3.183 0-6.281 2.187-6.281 6.192 0 4.661 5.57 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-4.011-3.097-6.182-6.274-6.182-2.204 0-4.446 1.042-5.726 3.238-1.285-2.206-3.522-3.248-5.719-3.248z"/>
                         </svg>
+
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 24 24"
+                            class="h-4 w-4 fill-current text-red-500 cursor-pointer"
+                            @click="isLiked = false; likesCount--;"
+                            x-show="isLiked"
+                        >
+                            <path d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"/>
+                        </svg>
+                        <div x-text="likesCount" class="text-xs font-semibold ml-2"></div>
+                    </div>
+
+                    <!-- Quote  -->
+                    <div class="bg-white flex items-center py-2 px-4">
+                        <div class="text-xs text-black" style="font-family: Poppins;">Be a game changer, the world is already full of player.</div>
+                    </div>
+
+                    <!-- Show comments link -->
+                    <div class="bg-white flex items-center py-2 px-4">
+                        <div class="text-xs text-gray-400 transtion duration-300 ease-in-out hover:text-black cursor-pointer" style="font-family: Poppins;">
+                            Voir les commentaires (<span x-text="commentsCount"></span>)
+                        </div>
+                    </div>
+
+                    <!-- Comments -->
+                    <div class="bg-white flex flex-col items-center pt-2 pb-4 px-4">
+                        <div class="text-black" style="font-family: Poppins;">Be a game changer, the world is already full of player.</div>
+                        <div class="text-black" style="font-family: Poppins;">Be a game changer, the world is already full of player.</div>
+                        <div class="text-black" style="font-family: Poppins;">Be a game changer, the world is already full of player.</div>
+                    </div>
+
+                    <!-- Add comment  -->
+                    <div class="bg-white flex items-center">
+                        <form @submit.prevent="search()" class="flex-1">
+                            <div class="flex">
+                                <input type="text" 
+                                    name="comment" 
+                                    placeholder="Ajouter un commentaire..." 
+                                    class="flex-1 text-xs rounded-sm bg-gray-100 py-2 px-4 focus:outline-none"
+                                    style="font-family: Poppins;" 
+                                />
+                                <button type="submit" class="bg-black text-white text-xs px-4 focus:outline-none" style="font-family: Poppins;">
+                                    Publier
+                                </button>
+                            </div>
+                        </form>
                     </div>
                 </div>
-
-                <div class="bg-white">
-                    <!-- Case: image square (width = height) -->
-                    <img src="https://picsum.photos/id/441/1024/1024" class="object-cover w-full" />
-                </div>
-
-                <!-- Likes / Share /Comments  -->
-                <div class="bg-white flex items-center p-4">
-                    <svg xmlns="http://www.w3.org/2000/svg" 
-                         viewBox="0 0 24 24"
-                         class="h-4 w-4 fill-current text-black cursor-pointer"
-                         @click="isLiked = true; likesCount++;"
-                         x-show="! isLiked"
-                    >
-                        <path d="M6.28 3c3.236.001 4.973 3.491 5.72 5.031.75-1.547 2.469-5.021 5.726-5.021 2.058 0 4.274 1.309 4.274 4.182 0 3.442-4.744 7.851-10 13-5.258-5.151-10-9.559-10-13 0-2.676 1.965-4.193 4.28-4.192zm.001-2c-3.183 0-6.281 2.187-6.281 6.192 0 4.661 5.57 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-4.011-3.097-6.182-6.274-6.182-2.204 0-4.446 1.042-5.726 3.238-1.285-2.206-3.522-3.248-5.719-3.248z"/>
-                    </svg>
-
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                         viewBox="0 0 24 24"
-                         class="h-4 w-4 fill-current text-red-500 cursor-pointer"
-                         @click="isLiked = false; likesCount--;"
-                         x-show="isLiked"
-                    >
-                        <path d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"/>
-                    </svg>
-                    <div x-text="likesCount" class="text-xs font-semibold ml-2"></div>
-                </div>
-
-                <!-- Add comment  -->
-                <div class="bg-white flex items-center">
-                    <form @submit.prevent="search()" class="flex-1">
-                        <div class="flex">
-                            <input type="text" 
-                                   name="comment" 
-                                   placeholder="Ajouter un commentaire..." 
-                                   class="flex-1 text-xs rounded-sm bg-gray-100 py-2 px-4 focus:outline-none "  
-                            />
-                            <button type="submit" class="bg-black text-white text-xs px-4">
-                                Publier
-                            </button>
-                        </div>
-                    </form>
-                </div>
-
             </div>
         </div>
     </body>
