fix: lightbox component, publish button state

--- a/components/lightbox.html
+++ b/components/lightbox.html
@@ -279,6 +279,7 @@
                         });
 
                         this.isCommentsVisible = true;
+                        this.isPublishButtonEnabled = false;
                         this.inputComment = '';
                     },
 
