--- a/components/lightbox.html
+++ b/components/lightbox.html
@@ -23,7 +23,7 @@
 
     <body class="antialiased bg-gray-200 min-h-screen" style="font-family: 'Montserrat';"> 
 
-        <!-- On click, lightbox,  need ti be just under body tag to avoid conflicts -->
+        <!-- Lightbox -->
         <div x-data="lightbox()">
 
             <div class="flex flex-col h-screen items-center justify-center">      
@@ -32,11 +32,11 @@
                     <h1 class="text-lg font-extrabold">Lightbox</h1>
                     <h2 class="text-sm text-gray-400 mb-8">Alpine JS & Tailwind CSS</h1>
 
-                    <!-- Lightbox -->
+                    <!-- Overlay -->
                     <div class="relative w-64 cursor-pointer shadow-md"
                          @mouseover="isOverlayVisible = true"
                          @mouseover.away="isOverlayVisible = false"
-                         @click="isLightboxVisible = true"
+                         @click="openLightbox()"
                     >
                         <!-- Image -->
                         <img src="https://picsum.photos/id/301/1024/1024" />
@@ -73,7 +73,7 @@
             </div>
 
             <!-- On click, lightbox BG -->
-            <div class="absolute top-0 left-0 flex flex-col bg-black bg-opacity-60 w-full min-h-screen z-40"
+            <div class="fixed top-0 left-0 flex flex-col bg-black bg-opacity-60 w-full min-h-screen z-40"
                  x-show="isLightboxVisible"
                  x-transition:enter="transition ease-in duration-300"
                  x-transition:enter-start="opacity-0"
@@ -83,11 +83,13 @@
                  x-transition:leave-end="opacity-0 transform -translate-y-16"
             >
                 <!-- Lightbox -->
-                <div class="max-w-3xl mx-auto my-16 shadow-md"
-                     @click.away="isLightboxVisible = false"
+                <div id="lightbox"
+                     class="max-w-2xl m-auto overflow-y-auto shadow-md"
+                     style="height: auto; max-height: 95vh;"
+                     @click.away="closeLightbox()"
                 >
 
-                    <!-- Navigation bar -->
+                    <!-- Info bar -->
                     <div class="bg-white flex items-center justify-between p-4">
                         <!-- Author -->
                         <div class="flex items-center">
@@ -110,13 +112,14 @@
                             <svg xmlns="http://www.w3.org/2000/svg" 
                                 viewBox="0 0 24 24" 
                                 class="h-3 w-3 fill-current text-black cursor-pointer transition duration-300 hover:text-gray-400"
-                                @click="isLightboxVisible = false"
+                                @click="closeLightbox()"
                             >
                                 <path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/>
                             </svg>
                         </div>
                     </div>
 
+                    <!-- Image -->
                     <div>
                         <img src="https://picsum.photos/id/301/1024/1024" class="object-cover w-full" />
                     </div>
@@ -242,38 +245,29 @@
                     isCommentsVisible: false,
                     isPublishButtonEnabled: false,
                     isLiked: false, 
-                    likesCount: 85,
+                    likesCount: 0,
                     inputComment: '',
-                    comments: [
-                        { 
-                            author: 'johndoe',
-                            body: 'Really nice !',
-                            date: ''
-                        },
-                        { 
-                            author: 'basevr',
-                            body: 'I love it !',
-                            date: ''
-                        },
-                        { 
-                            author: 'maryn',
-                            body: 'So bad...',
-                            date: ''
-                        },
-                        { 
-                            author: 'janedoe',
-                            body: 'So juicy ! I would love to master photoshop like you are !',
-                            date: ''
-                        },
-                    ],
+                    comments: [],
+
+                    openLightbox() {
+                        document.querySelector("body").style.overflow = 'hidden';
+                        this.isLightboxVisible = true;
+                    },
+        
+                    closeLightbox() {
+                        this.isLightboxVisible = false; 
+                        setTimeout(() => {
+                            document.querySelector("body").style.overflow = 'visible';
+                        }, 100);           
+                    },
 
                     commentsCount() {
                         return this.comments.length;
                     },
 
                     publishComment() {
-                        this.comments.unshift({
-                            author: 'sylent',
+                        this.comments.push({
+                            author: 'johndoe',
                             body: this.inputComment,
                             date: ''
                         });
@@ -281,6 +275,14 @@
                         this.isCommentsVisible = true;
                         this.isPublishButtonEnabled = false;
                         this.inputComment = '';
+                        this.scrollToLightboxBottom();
+                    },
+
+                    scrollToLightboxBottom() {
+                        setTimeout(() => {
+                            let lightbox = document.querySelector("#lightbox");
+                            lightbox.scrollTo({ top: lightbox.clientHeight, behavior: 'smooth' });
+                        }, 100);
                     },
 
                     deleteComment(comment) {
@@ -297,6 +299,7 @@
                     }
 
                 }
+
             }
         </script>
     </body>
