--- a/components/alert-warning-v2.html
+++ b/components/alert-warning-v2.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Alert: Error, with Tailwind CSS & AlpineJS</title>
+        <title>Alert: Warning, with Tailwind CSS & AlpineJS</title>
 
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="../img/favicon.png" />
@@ -33,12 +33,12 @@
                      x-transition:leave-start="opacity-100 translate-y-0"
                      x-transition:leave-end="opacity-0 translate-y-16"
                 >
-                    <div class="flex flex-col">
+                    <div class="flex flex-col bg-yellow-100">
                         <!-- Top bar -->
-                        <div class="flex justify-end bg-yellow-300">
+                        <div class="flex justify-end">
                             <svg xmlns="http://www.w3.org/2000/svg" 
                                  viewBox="0 0 24 24"
-                                 class="h-3 w-3 m-4 fill-current text-yellow-600 cursor-pointer transition duration-200 ease-in-out hover:text-yellow-900"
+                                 class="h-2 w-2 m-3 fill-current text-yellow-600 cursor-pointer transition duration-200 ease-in-out hover:text-yellow-300"
                                  @click="open = false"
                             >
                                 <path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/>
@@ -46,7 +46,7 @@
 
                         </div>
 
-                        <div class="flex flex-col p-8 bg-yellow-100">
+                        <div class="flex flex-col px-8 pb-8">
                             <!-- Title -->
                             <div class="mb-4">
                                 <p class="font-bold text-yellow-600">Warning</p>
