--- a/components/alert-warning.html
+++ b/components/alert-warning.html
@@ -15,16 +15,17 @@
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
         <!-- Alpine JS -->
         <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
     </head>
 
-    <body class="antialiased bg-gray-200 min-h-screen" style="font-family: 'Montserrat';"> 
+    <body class="antialiased bg-gray-100 min-h-screen" style="font-family: 'Poppins';"> 
         <div x-data="{ open: false }">
             <!-- Alert : Closed by default -->
             <template x-if="open">
-                <div class="fixed top-20 left-1/2 transform -translate-x-1/2 w-full max-w-lg bg-white border-yellow-300 border shadow-md rounded-sm"
+                <div class="fixed top-20 left-1/2 transform -translate-x-1/2 w-full max-w-lg shadow-md rounded-sm overflow-hidden"
                      x-transition:enter="transition ease-out duration-300"
                      x-transition:enter-start="opacity-0 translate-y-16"
                      x-transition:enter-end="opacity-100 translate-y-0"
@@ -32,33 +33,44 @@
                      x-transition:leave-start="opacity-100 translate-y-0"
                      x-transition:leave-end="opacity-0 translate-y-16"
                 >
-                    <div class="flex">
-                        <div class="py-6 pl-6 flex-1">
-                            <h2 class="mb-2 font-extrabold text-md uppercase">Warning</h2>
-                            <p class="text-xs text-justify">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam quas cupiditate, 
-                                error quasi eum ea, recusandae voluptatibus harum porro libero animi quam.
-                            </p>      
-                        </div>
-                        <div class="p-4">
+                    <div class="flex flex-col bg-yellow-100">
+                        <!-- Top bar -->
+                        <div class="flex justify-end">
                             <svg xmlns="http://www.w3.org/2000/svg" 
-                                 viewBox="0 0 512 512" 
-                                 height="16" 
-                                 class="fill-current cursor-pointer text-gray-600 hover:text-yellow-600 transition duration-300 ease-out"
+                                 viewBox="0 0 24 24"
+                                 class="h-2 w-2 m-3 fill-current text-yellow-600 cursor-pointer transition duration-200 ease-in-out hover:text-yellow-300"
                                  @click="open = false"
                             >
-                                <!-- Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) -->
-                                <path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm101.8-262.2L295.6 256l62.2 62.2c4.7 4.7 4.7 12.3 0 17l-22.6 22.6c-4.7 4.7-12.3 4.7-17 0L256 295.6l-62.2 62.2c-4.7 4.7-12.3 4.7-17 0l-22.6-22.6c-4.7-4.7-4.7-12.3 0-17l62.2-62.2-62.2-62.2c-4.7-4.7-4.7-12.3 0-17l22.6-22.6c4.7-4.7 12.3-4.7 17 0l62.2 62.2 62.2-62.2c4.7-4.7 12.3-4.7 17 0l22.6 22.6c4.7 4.7 4.7 12.3 0 17z"/>
+                                <path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/>
                             </svg>
-                        </div>    
+
+                        </div>
+
+                        <div class="flex flex-col px-8 pb-8">
+                            <!-- Title -->
+                            <div class="mb-4">
+                                <p class="font-bold text-yellow-600">Warning</p>
+                            </div>
+
+                            <!-- Body -->
+                            <div>
+                                <p class="text-xs text-justify text-yellow-600">
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam quas cupiditate, 
+                                    error quasi eum ea, recusandae voluptatibus harum porro libero animi quam.
+                                </p>      
+                            </div>
+                        </div>
+
                     </div>
+
+                  
                 </div>
             </template>
 
-            <div class="flex flex-col h-screen items-center justify-center">      
+            <div class="flex flex-col h-screen justify-center items-center">      
                 <div class="bg-white p-8 shadow-md">
                     <!-- Title -->
-                    <h1 class="text-lg font-extrabold mt-4">Alert: Warning</h1>
+                    <h1 class="text-lg font-extrabold mt-4">Alert: Error</h1>
                     <h2 class="text-sm text-gray-400 mb-8">Alpine JS & Tailwind CSS</h1>
 
                     <!-- Button displaying the flash message -->
