--- a/components/administration/dashboard.html
+++ b/components/administration/dashboard.html
@@ -6,7 +6,7 @@
     <title>Administration Panel, with Tailwind CSS</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../img/favicon.png" />
+    <link rel="icon" type="image/png" href="../../img/favicon.png" />
 
     <!-- Tailwind CSS -->
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
             <!-- Avatar -->
             <div class="flex flex-col items-center p-12">
                 <div class="text-center">
-                    <img src="../img/avatar-male.png" alt="Avatar" title="Avatar" class="h-12 mb-2" />
+                    <img src="../../img/avatar-male.png" alt="Avatar" title="Avatar" class="h-12 mb-2" />
                 </div>
                 <div class="text-sm font-bold">
                     John Doe
@@ -41,7 +41,7 @@
             <!-- Menu -->
             <div class="flex flex-col items-center p-12">
                 <!-- Dashboard -->
-                <a href="#" class="block p-4 fill-current text-black transition duration-300 ease-out hover:text-gray-600">
+                <a href="#" class="block p-4 fill-current text-black transition duration-300 ease-out hover:text-gray-400">
                     <svg xmlns="http://www.w3.org/2000/svg" 
                          viewBox="0 0 24 24"
                          class="h-6 w-6"
@@ -50,7 +50,7 @@
                     </svg>
                 </a>
                 <!-- Articles -->
-                <a href="#" class="block p-4 fill-current text-black transition duration-300 ease-out hover:text-gray-600">
+                <a href="#" class="block p-4 fill-current text-black transition duration-300 ease-out hover:text-gray-400">
                     <svg xmlns="http://www.w3.org/2000/svg" 
                          viewBox="0 0 24 24"
                          class="h-6 w-6"
@@ -59,7 +59,7 @@
                     </svg>
                 </a>
                 <!-- Creations -->
-                <a href="#" class="block p-4 fill-current text-black transition duration-300 ease-out hover:text-gray-600">
+                <a href="#" class="block p-4 fill-current text-black transition duration-300 ease-out hover:text-gray-400">
                     <svg xmlns="http://www.w3.org/2000/svg" 
                             viewBox="0 0 24 24"
                             class="h-6 w-6"
@@ -68,7 +68,7 @@
                     </svg>
                 </a>
                 <!-- Users -->
-                <a href="#" class="block p-4 fill-current text-black transition duration-300 ease-out hover:text-gray-600">
+                <a href="#" class="block p-4 fill-current text-black transition duration-300 ease-out hover:text-gray-400">
                     <svg xmlns="http://www.w3.org/2000/svg" 
                             viewBox="0 0 24 24"
                             class="h-6 w-6"
@@ -77,7 +77,7 @@
                     </svg>
                 </a>
                 <!-- Roles -->
-                <a href="#" class="block p-4 fill-current text-black transition duration-300 ease-out hover:text-gray-600">
+                <a href="#" class="block p-4 fill-current text-black transition duration-300 ease-out hover:text-gray-400">
                     <svg xmlns="http://www.w3.org/2000/svg" 
                             viewBox="0 0 24 24"
                             class="h-6 w-6"
@@ -111,19 +111,56 @@
                 </div>
             </div>
         </div>
+        <!-- Right side  -->
         <div class="flex flex-col flex-1">
-            <!-- Top bar, with date and search... -->
-            <div class="flex items-center">
+            <!-- Top bar -->
+            <div class="flex items-center justify-between p-12">
                 <!-- Welcome -->
                 <div class="flex flex-col">
                     <div>
                         <h2 class="text-2xl font-extrabold">Welcome John</h2>
                     </div>
                     <div>
-                        <p class="text-xs text-gray-600">Be the change you wish to see in the world. -Mahatma Gandhi</p>
+                        <p class="text-xs text-gray-600">
+                            Be the change you wish to see in the world. -Mahatma Gandhi
+                        </p>
+                    </div>
+                </div>
+                <!-- Search & Notifications -->
+                <div class="flex items-center">
+                    <div class="p-4">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                             viewBox="0 0 24 24"
+                             class="h-5 w-5"
+                        >
+                            <path d="M15.137 3.945c-.644-.374-1.042-1.07-1.041-1.82v-.003c.001-1.172-.938-2.122-2.096-2.122s-2.097.95-2.097 2.122v.003c.001.751-.396 1.446-1.041 1.82-4.667 2.712-1.985 11.715-6.862 13.306v1.749h20v-1.749c-4.877-1.591-2.195-10.594-6.863-13.306zm-3.137-2.945c.552 0 1 .449 1 1 0 .552-.448 1-1 1s-1-.448-1-1c0-.551.448-1 1-1zm3 20c0 1.598-1.392 3-2.971 3s-3.029-1.402-3.029-3h6z"/>
+                        </svg>
+                    </div>
+                    <div class="py-4 pl-4">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                             viewBox="0 0 24 24"
+                             class="h-5 w-5"
+                        >
+                            <path d="M23.809 21.646l-6.205-6.205c1.167-1.605 1.857-3.579 1.857-5.711 0-5.365-4.365-9.73-9.731-9.73-5.365 0-9.73 4.365-9.73 9.73 0 5.366 4.365 9.73 9.73 9.73 2.034 0 3.923-.627 5.487-1.698l6.238 6.238 2.354-2.354zm-20.955-11.916c0-3.792 3.085-6.877 6.877-6.877s6.877 3.085 6.877 6.877-3.085 6.877-6.877 6.877c-3.793 0-6.877-3.085-6.877-6.877z"/>
+                        </svg>
                     </div>
                 </div>
             </div>
+
+            <!-- Body -->
+            <div class="flex flex-col bg-white mx-12 mb-12 mt-6 shadow-md rounded-sm">
+                <!-- Title -->
+                <div class="relative px-12 pt-12 mb-6">
+                    <h1 class="font-extrabold text-6xl uppercase absolute -top-8 left-12">Dashboard</h1>
+                </div>
+
+                <!-- Under construction -->
+                <div class="px-12 pb-12">
+                    <h3 class="text-4xl font-extrabold">Under construction...</h3>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </body>
